<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.login.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/login_activity_scroll_margin_bottom"
        android:paddingHorizontal="@dimen/common_screen_horizontal_padding"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/appLogoImageView"
                android:layout_width="@dimen/login_activity_app_logo_size"
                android:layout_height="@dimen/login_activity_app_logo_size"
                android:layout_marginTop="@dimen/login_activity_app_logo_margin_top"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toTopOf="@id/welcomeTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/welcomeTextView"
                style="@style/big_size_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                app:layout_constraintBottom_toTopOf="@id/signInTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appLogoImageView" />

            <TextView
                android:id="@+id/signInTextView"
                style="@style/medium_size_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/sing_in_text"
                app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_activity_app_logo_margin_top"
                app:layout_constraintBottom_toTopOf="@id/passwordTextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/signInTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    style="@style/email_input_field_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                style="@style/password_input_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    style="@style/password_input_field_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/loaderBackgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha"
        android:elevation="@dimen/cardview_default_elevation"
        android:visibility="gone" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loginLoader"
        android:layout_width="@dimen/common_loader_size"
        android:layout_height="@dimen/common_loader_size"
        android:adjustViewBounds="true"
        android:elevation="@dimen/cardview_default_elevation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_loader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/full_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_screen_horizontal_padding"
        android:layout_marginBottom="@dimen/common_button_margin_bottom"
        android:enabled="false"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@id/signUpLinearLayout" />

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/login_activity_sign_up_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/needSignUpTextView"
            style="@style/small_size_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_sign_up_text"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/signUpTextView"
            style="@style/small_size_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_button_margin_bottom"
            android:text="@string/sign_up_text"
            android:textColor="@color/pressed_blue"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
