<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.dashboard.view.MovementDetailActivity">

    <ImageView
        android:id="@+id/closeImageView"
        android:layout_width="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_icon_margin_top"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/common_screen_horizontal_padding">

            <ImageView
                android:id="@+id/successIconImageView"
                android:layout_width="@dimen/success_sign_up_logo_size"
                android:layout_height="@dimen/success_sign_up_logo_size"
                android:layout_marginTop="@dimen/header_icon_margin_top"
                android:contentDescription="@string/app_name"
                android:src="@drawable/il_success"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/amountTextView"
                style="@style/big_size_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_button_margin_bottom"
                android:text="$400"
                android:textSize="@dimen/common_detail_text_size"
                app:layout_constraintBottom_toBottomOf="@id/successIconImageView"
                app:layout_constraintStart_toEndOf="@id/successIconImageView"
                app:layout_constraintTop_toTopOf="@id/successIconImageView" />

            <TextView
                android:id="@+id/authorTextView"
                style="@style/big_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_paragraph_margin_top"
                android:text="@string/success_title_text"
                app:layout_constraintBottom_toTopOf="@id/authorEmailTextView"
                app:layout_constraintTop_toBottomOf="@id/successIconImageView" />

            <TextView
                android:id="@+id/authorEmailTextView"
                style="@style/medium_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_paragraph_text"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toTopOf="@id/directionIndicatorImageView"
                app:layout_constraintTop_toBottomOf="@id/authorTextView" />

            <ImageView
                android:id="@+id/directionIndicatorImageView"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:layout_margin="@dimen/common_input_padding"
                android:background="@drawable/bg_gray_circle"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/common_input_stroke"
                android:rotation="270"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toTopOf="@id/receiverTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authorEmailTextView"
                app:tint="@color/dark_green" />

            <TextView
                android:id="@+id/receiverTextView"
                style="@style/big_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_title_text"
                app:layout_constraintBottom_toTopOf="@id/receiverEmailTextView"
                app:layout_constraintTop_toBottomOf="@id/directionIndicatorImageView" />

            <TextView
                android:id="@+id/receiverEmailTextView"
                style="@style/medium_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_paragraph_text"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toBottomOf="@id/receiverTextView" />

            <TextView
                android:id="@+id/dateTextView"
                style="@style/medium_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_paragraph_margin_top"
                android:text="@string/success_paragraph_text"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toBottomOf="@id/receiverEmailTextView" />


            <TextView
                android:id="@+id/descriptionTextView"
                style="@style/medium_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_paragraph_margin_top"
                android:text="@string/success_paragraph_text"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toBottomOf="@id/dateTextView" />

            <TextView
                android:id="@+id/codeTextView"
                style="@style/medium_size_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_paragraph_margin_top"
                android:text="@string/success_paragraph_text"
                android:textColor="@color/dark_gray"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>